# clg

./: Cargo.toml  README.md
src/: cli.rs  command.rs  config.rs  error.rs  lib.rs  main.rs
zsh/: _clg
